- Improving and tuning WAV while converting from bytearray, adjust gain - adjust visualization - try to implement low pass filtering